fixed alignment 2

--- a/styles/content-card.css
+++ b/styles/content-card.css
@@ -13,13 +13,10 @@
 }
 
 .card-content-container {
-    margin: auto;
     width: 100%;
     position: absolute;
     top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
+    transform: translate(0, -50%)
 }
 
 .card-header {
